# Deep-Research-Agent-using-CrewAI

./: README.md  crew.py  pyproject.toml
config/: agents.yaml  tasks.yaml
